
public static class TagManager
{
public static string PLAYER_TAG= "Player";
public static string ENEMY_TAG = "Enemy"; 
public static string BULLET_TAG = "Bullet";
public static string BLOCKING_TAG = "Blocking";
public static string BOSS_TAG = "Boss";
public static string SHOOTER_ENEMY_TAG= "ShooterEnemy";
public static string MAIN_MENU_CHARACTER_TAG= "MainMenuCharacter";
public static string HORIZONTAL_AXIS = "Horizontal"; 
public static string VERTICAL_AXIS = "Vertical";

public static string FACE_X_ANIMATION_PARAMETER = "faceX"; 
public static string FACE_Y_ANIMATION_PARAMETER = "faceY"; 
public static string SHOOT_ANIMATION_PARAMETER = "Shoot"; 
public static string EXPLODE_ANIMATION_PARAMETER = "Explode"; 
public static string WALK_ANIMATION_PARAMETER = "Walk"; 
public static string DEATH_ANIMATION_PARAMETER = "Death";
public static string OPEN_ANIMATION_PARAMETER = "Open";
public static string BLOCKING_LAYER_MASK= "Blocking";
public static string PLAYER_WEAPON_OBJECT_NAME = "Gun Sprites";

}